# funding_monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: funding-monitor.yml
config/: profiles.json  sources.json
data/: state.json
docs/: index.html
funding_monitor/: __init__.py  cli.py  config.py  emailer.py  fetchers.py  http.py  llm.py  models.py  render.py  scheduler.py  state.py
tests/: test_dedup.py  test_fetchers.py  test_llm.py  test_render_email_scheduler.py  test_state.py
